--- a/several levels/Base.lproj/Main.storyboard
+++ b/several levels/Base.lproj/Main.storyboard
@@ -92,7 +92,7 @@
                         <barButtonItem image="home" id="G9k-7I-PGL">
                             <color key="tintColor" red="0.73725490199999999" green="0.89411764709999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
-                                <action selector="homeBUtton:" destination="srl-zW-oFF" id="LNN-Ha-7Wv"/>
+                                <action selector="homeButton:" destination="srl-zW-oFF" id="gjQ-35-zGD"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="YJT-4P-mnd"/>
@@ -104,11 +104,17 @@
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="abs-wC-VSb"/>
                         <barButtonItem image="games" id="zBg-ia-GAJ">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="tintColor" red="0.73725490199999999" green="0.89411764709999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="sortGames:" destination="srl-zW-oFF" id="IoV-Wj-adt"/>
+                            </connections>
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="Ow9-P4-KLX"/>
                         <barButtonItem image="tech" id="l8b-eA-4hl">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="tintColor" red="0.73725490199999999" green="0.89411764709999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="sortTech:" destination="srl-zW-oFF" id="DDS-E9-a7Y"/>
+                            </connections>
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="KMZ-Ox-Wv2"/>
                     </toolbarItems>
@@ -117,9 +123,10 @@
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="controller" destination="zBg-ia-GAJ" id="Jvr-Iz-Dh8"/>
                         <outlet property="homeButtonIcon" destination="G9k-7I-PGL" id="Rr3-2U-1U4"/>
                         <outlet property="navBarTitle" destination="8Zw-ih-PPD" id="pHK-yY-GvM"/>
+                        <outlet property="sortGamesIcon" destination="zBg-ia-GAJ" id="ZY9-IZ-oQt"/>
+                        <outlet property="sortTechIcon" destination="l8b-eA-4hl" id="oq3-jT-wbc"/>
                         <outlet property="sortTutorialsIcon" destination="U9p-w5-Avj" id="DPi-kA-p3q"/>
                     </connections>
                 </tableViewController>
@@ -159,10 +166,16 @@
                     <toolbarItems>
                         <barButtonItem systemItem="refresh" id="SsA-u9-Nyf">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="refresh:" destination="8pY-7d-RjM" id="Tqq-pX-QKg"/>
+                            </connections>
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="UCc-rY-stp"/>
                         <barButtonItem systemItem="action" id="QnW-1S-Lfi">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="shareButton:" destination="8pY-7d-RjM" id="Fsn-HL-Org"/>
+                            </connections>
                         </barButtonItem>
                     </toolbarItems>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
@@ -185,11 +198,16 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="4hQ-ur-A35">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.15294117647058825" green="0.81176470588235294" blue="0.90196078431372551" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                            <offsetWrapper key="textShadowOffset" horizontal="0.0" vertical="0.0"/>
+                        </textAttributes>
                     </navigationBar>
                     <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="NMw-e5-kwo">
                         <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.37427230430000002" green="0.82496779789999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="0.15294117647058825" green="0.81176470588235294" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
                     </toolbar>
                     <connections>
                         <segue destination="srl-zW-oFF" kind="relationship" relationship="rootViewController" id="GBU-eM-mDJ"/>
